[Add] favorite comment

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,8 +35,10 @@
       </div>
     </header>
 
-    <div class="container">
-      <p id="notice"><%= notice %></p>
+    <div class=notice-box>
+      <div class="container">
+        <p id="notice"><%= notice %></p>
+      </div>
     </div>
 
     <div class="container">
