--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,7 +5,7 @@
 		<%= render 'users/profile', user: @book.user %>
 
 		<h2>New book</h2>
-		<%= render 'books/newform', book: @book %>
+		<%= render 'books/newform', book: @book_new %>
 
 	</div>
 
@@ -23,12 +23,56 @@
 					<td><%= link_to @book.title, book_path(@book) %></td>
 					<td><%= @book.body %></td>
 
+                    <% if @book.favorited_by?(current_user) %>
+					  <td>
+					  	<%= link_to book_favorites_path(@book), method: :delete do %>
+					  	  <span class="glyphicon glyphicon-heart" aria-hidden="true" style="color: gray;"></span>
+					  	  <%= @book.favorites.count %>
+					  	<% end %>
+					  </td>
+					  <% else %>
+					  <td>
+					  	<%= link_to book_favorites_path(@book), method: :post do %>
+					  	  <span class="glyphicon glyphicon-heart-empty" aria-hidden="true" ></span>
+					  	  <%= @book.favorites.count %>
+					  	<% end %>
+					  </td>
+					<% end %>
+
+					<td>コメント数 : <%= @book.book_comments.count %></td>
+
 					<% if @book.user == current_user %>
 					<td><%= link_to "Edit", edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
 					<td><%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %></td>
 					<% end %>
 				</tr>
-			</table>
+		</table>
+
+		<table>
+			<% @book.book_comments.each do |book_comment| %>
+				<tr>
+				  <td>
+				  	<%= attachment_image_tag(book_comment.user, :profile_image, :fill, 50, 50, fallback: "no-image-mini.jpg") %><br>
+				  	<%= book_comment.user.name %>
+				  </td>
+				  <td>
+				  	<%= book_comment.comment %>
+				  </td>
+				  <td>
+				  	<% if book_comment.user == current_user %>
+				  	<%= link_to "Destroy", book_book_comment_path(@book, book_comment), method: :delete, class: "btn btn-danger pull-right" %>
+				  	<% end %>
+				  </td>
+				</tr>
+			<% end %>
+		</table>
+
+		<%= form_for [@book, @book_comment] do |f| %>
+		  <div>
+		  	<%= f.text_area :comment, class: "col-xs-9" %>
+		  </div>
+		  <%= f.submit "送信", class: "btn btn-default" %>
+		<% end %>
 
 	</div>
 </div>
